--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,5 @@ _site/
 # Details at https://github.com/github/pages-gem/issues/768
 Gemfile.lock
 
-comple_notes_1.qmd
-comple_notes.qmd
+complete_notes_1.qmd
+complete_notes.qmd
