--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,19 @@
-# This .gitignore is appropriate for repositories deployed to GitHub Pages and using
-# a Gemfile as specified at https://github.com/github/pages-gem#conventional
+# Ignore everything
+*
 
-# Basic Jekyll gitignores (synchronize to Jekyll.gitignore)
-_site/
-.sass-cache/
-.jekyll-cache/
-.jekyll-metadata
+# Except these files
+!.gitignore
+!Lektion_1/*
+!Lektion_2/*
+!Lektion_3/*
+!Lektion_4/*
+!Lektion_5/*
+!Lektion_6/lektion_6.pptx
+!Lektion_6/quiz/lektion_6_test.txt
+!Lektion_7/*
+!Lektion_8/*
+!Tidl_eksam_spg/
+# etc..
 
-# Additional Ruby/bundler ignore for when you run: bundle install
-/vendor
-
-# Specific ignore for GitHub Pages
-# GitHub Pages will always use its own deployed version of pages-gem 
-# This means GitHub Pages will NOT use your Gemfile.lock and therefore it is
-# counterproductive to check this file into the repository.
-# Details at https://github.com/github/pages-gem/issues/768
-Gemfile.lock
-
-complete_notes_1.qmd
-complete_notes.qmd
+# ... even if they are in subdirectories
+#!*/
